Fix some buttons being too short

--- a/src/index.scss
+++ b/src/index.scss
@@ -115,12 +115,12 @@ a:hover, .link:hover{
 }
 
 .btn{
-  padding: .5rem 1.1rem;
+  padding: .15rem 1.1rem;
   background: transparent;
   color: var(--color-text);
   font-size: .95rem;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 2rem;
   display: inline-block;
   border: none;
   border-radius: $border-radius;
@@ -243,16 +243,14 @@ td, th{
 
 .table-compact{
   border-collapse: collapse;
-}
 
-.table-compact tr,
-.table-compact img,
-.table-compact .btn{
-  height: 1.5rem;
-}
+  tr, img{
+    height: 1.5rem;
+  }
 
-.table-compact .btn{
-  line-height: 1.5;
+  .btn{
+    line-height: 1.5rem;
+  }
 }
 
 .card-list{
